# kr_8_docker

./: . gitignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options_alter_habit_execution_time_and_more.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_users_managers_alter_users_telegram_id.py  0003_alter_users_managers.py
